--- a/css/styles.css
+++ b/css/styles.css
@@ -302,7 +302,7 @@ ul {
     margin: 0 auto 72px;
 }
 
-.button {
+.headline-btn {
     background-color: #4d5ae5;
     font-weight: 500;
     font-size: 16px;
@@ -321,9 +321,9 @@ ul {
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.button:hover,
-.button:active,
-.button:focus {
+.headline-btn:hover,
+.headline-btn:active,
+.headline-btn:focus {
     background-color: #404bbf;
 }
 
@@ -589,7 +589,10 @@ ul {
 }
 
 .footer-container-logo {
-    text-align: center;
+    line-height: 1.5;
+    color: #f4f4fd;
+    letter-spacing: 0.02em;
+    text-align: left;
 }
 
 .sm-container {
@@ -1304,6 +1307,10 @@ ul {
         padding: 0;
     }
 
+    .subscribe-button-svg {
+        fill: #ffffff;
+    }
+
     .form-label-input {
         margin: 0;
         padding: 8px 12px;
@@ -1320,3 +1327,7 @@ ul {
     }
 }
 
+
+footer-text {
+    color: #f4f4fd;
+}
