--- a/css/styles.css
+++ b/css/styles.css
@@ -1081,7 +1081,7 @@ ul {
 
     /* Footer */
 
-    .container-footer {
+    .footer-container {
         flex-wrap: wrap;
         flex-direction: row;
         padding: 0 108px;
