--- a/css/styles.css
+++ b/css/styles.css
@@ -509,7 +509,7 @@ ul {
     transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.portfolio-item:hover .image-paragraph {
+.portfolio-item:hover .portfolio-item-text-cover {
     transform: translateY(0%);
 }
 
